ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
int32_t ucx_mqtt_Connect(ucx_instance_t *inst, int32_t mqtt_id);
int32_t ucx_mqtt_SetKeepAlive(ucx_instance_t *inst, int32_t mqtt_id, int32_t keep_alive);
int32_t ucx_mqtt_GetKeepAlive(ucx_instance_t *inst, int32_t mqtt_id, int32_t * pKeepAlive);
int32_t ucx_mqtt_SetLastWillAndTestament3(ucx_instance_t *inst, int32_t mqtt_id, const char * topic, const char * will_msg);
int32_t ucx_mqtt_SetLastWillAndTestament4(ucx_instance_t *inst, int32_t mqtt_id, const char * topic, const char * will_msg, uMqttQos_t qos);
int32_t ucx_mqtt_SetLastWillAndTestament5(ucx_instance_t *inst, int32_t mqtt_id, const char * topic, const char * will_msg, uMqttQos_t qos, uMqttRetain_t retain);
bool ucx_mqtt_GetLastWillAndTestamentBegin(ucx_instance_t *inst, int32_t mqtt_id, uCxMqttGetLastWillAndTestament_t * pMqttGetLastWillAndTestamentRsp);
int32_t ucx_mqtt_SetTLS2(ucx_instance_t *inst, int32_t mqtt_id, uWifiTlsVersion_t tls_version);
int32_t ucx_mqtt_SetTLS3(ucx_instance_t *inst, int32_t mqtt_id, uWifiTlsVersion_t tls_version, const char * ca_name);
int32_t ucx_mqtt_SetTLS5(ucx_instance_t *inst, int32_t mqtt_id, uWifiTlsVersion_t tls_version, const char * ca_name, const char * client_cert_name, const char * client_key_name);
bool ucx_mqtt_GetTLSBegin(ucx_instance_t *inst, int32_t mqtt_id, uCxMqttGetTLS_t * pMqttGetTLSRsp);
int32_t ucx_mqtt_Disconnect(ucx_instance_t *inst, int32_t mqtt_id);
int32_t ucx_mqtt_Publish(ucx_instance_t *inst, int32_t mqtt_id, uMqttQos_t qos, uMqttRetain_t retain, const char * topic, const uint8_t * binary_data, int32_t binary_data_len);
int32_t ucx_mqtt_Subscribe3(ucx_instance_t *inst, int32_t mqtt_id, uMqttSubscribeAction_t subscribe_action, const char * topic);
int32_t ucx_mqtt_Subscribe4(ucx_instance_t *inst, int32_t mqtt_id, uMqttSubscribeAction_t subscribe_action, const char * topic, uMqttQos_t qos);
int32_t ucx_mqtt_ReadBegin(ucx_instance_t *inst, int32_t mqtt_id, uint8_t * pDataBuf, uint16_t dataBufLength, const char * * ppTopic);
void ucx_mqtt_RegisterConnect(ucx_instance_t *inst, uUEMQC_t callback);
void ucx_mqtt_RegisterDisconnect(ucx_instance_t *inst, uUEMQDC_t callback);
void ucx_mqtt_RegisterDataAvailable(ucx_instance_t *inst, uUEMQDA_t callback);
void ucx_mqtt_RegisterDataDropped(ucx_instance_t *inst, uUEMQDD_t callback);
void ucx_mqtt_RegisterPublishCompleted(ucx_instance_t *inst, uUEMQPC_t callback);
void ucx_mqtt_RegisterSubscribeCompleted(ucx_instance_t *inst, uUEMQSC_t callback);
/* ========== NETWORK_TIME FUNCTIONS ========== */
int32_t ucx_network_time_SetClientEnabled(ucx_instance_t *inst, uNtpClientStatus_t client_status);
int32_t ucx_network_time_GetClientEnabled(ucx_instance_t *inst, uNtpClientStatus_t * pClientStatus);
int32_t ucx_network_time_SetNtpServer(ucx_instance_t *inst, int32_t ntp_server_id, const char * ntp_server_address);
bool ucx_network_time_GetNtpServerBegin(ucx_instance_t *inst, uCxNtpGetNtpServer_t * pNtpGetNtpServerRsp);
/* ========== POWER FUNCTIONS ========== */
int32_t ucx_power_DeepSleepWithGpioWakeup(ucx_instance_t *inst);
int32_t ucx_power_DeepSleep(ucx_instance_t *inst, uPowerWakeupMode_t wakeup_mode);
int32_t ucx_power_SetPowerSaveLevel(ucx_instance_t *inst, int32_t level);
int32_t ucx_power_GetPowerSaveLevel(ucx_instance_t *inst, int32_t * pLevel);
int32_t ucx_power_SetPowerSaveTimeout(ucx_instance_t *inst, int32_t timeoutMs);
/* ========== SECURITY FUNCTIONS ========== */
int32_t ucx_security_CertificateRemove(ucx_instance_t *inst, uSecCertType_t cert_type, const char * name);
int32_t ucx_security_CertificateRemoveAll(ucx_instance_t *inst);
int32_t ucx_security_CertificateUpload(ucx_instance_t *inst, uSecCertType_t cert_type, const char * name, const uint8_t * binary_data, int32_t binary_data_len);
int32_t ucx_security_CertificateUploadPW(ucx_instance_t *inst, uSecCertType_t cert_type, const char * name, const char * password, const uint8_t * binary_data, int32_t binary_data_len);
void ucx_security_ListCertificatesBegin(ucx_instance_t *inst);
bool ucx_security_ListCertificatesGetNext(ucx_instance_t *inst, uCxSecListCertificates_t * pSecListCertificatesRsp);
bool ucx_security_ReadAllCertificatesDetailsBegin(ucx_instance_t *inst, const char * name, uCxSecReadAllCertificatesDetails_t * pSecReadAllCertificatesDetailsRsp);
bool ucx_security_ReadCertificatesDetailsBegin(ucx_instance_t *inst, const char * name, uSecCertDetailId_t cert_detail_id, uCxSecReadCertificatesDetails_t * pSecReadCertificatesDetailsRsp);
void ucx_security_ListTlsExtensionsBegin(ucx_instance_t *inst);
bool ucx_security_ListTlsExtensionsGetNext(ucx_instance_t *inst, uCxSecListTlsExtensions_t * pSecListTlsExtensionsRsp);
int32_t ucx_security_SetTlsServerNameIndication(ucx_instance_t *inst, uEnabled_t enabled);
int32_t ucx_security_GetTlsServerNameIndication(ucx_instance_t *inst, uEnabled_t * pEnabled);
int32_t ucx_security_SetTlsHandshakeFrag(ucx_instance_t *inst, uEnabled_t enabled);
int32_t ucx_security_GetTlsHandshakeFrag(ucx_instance_t *inst, uEnabled_t * pEnabled);
/* ========== SOCKET FUNCTIONS ========== */
int32_t ucx_socket_Create1(ucx_instance_t *inst, uSocketProtocol_t protocol, int32_t * pSocketHandle);
int32_t ucx_socket_Create2(ucx_instance_t *inst, uSocketProtocol_t protocol, uSocketPrefIpVer_t pref_ip_ver, int32_t * pSocketHandle);
int32_t ucx_socket_SetTLS2(ucx_instance_t *inst, int32_t socket_handle, uWifiTlsVersion_t tls_version);
int32_t ucx_socket_SetTLS3(ucx_instance_t *inst, int32_t socket_handle, uWifiTlsVersion_t tls_version, const char * ca_name);
int32_t ucx_socket_SetTLS5(ucx_instance_t *inst, int32_t socket_handle, uWifiTlsVersion_t tls_version, const char * ca_name, const char * client_cert_name, const char * client_key_name);
bool ucx_socket_GetTLSBegin(ucx_instance_t *inst, int32_t socket_handle, uCxSocketGetTLS_t * pSocketGetTLSRsp);
int32_t ucx_socket_Connect(ucx_instance_t *inst, int32_t socket_handle, const char * host_address, int32_t remote_port);
int32_t ucx_socket_SetReadMode(ucx_instance_t *inst, uReadMode_t read_mode);
int32_t ucx_socket_GetReadMode(ucx_instance_t *inst, uReadMode_t * pReadMode);
int32_t ucx_socket_Write(ucx_instance_t *inst, int32_t socket_handle, const uint8_t * binary_data, int32_t binary_data_len);
int32_t ucx_socket_Close(ucx_instance_t *inst, int32_t socket_handle);
int32_t ucx_socket_Read(ucx_instance_t *inst, int32_t socket_handle, int32_t length, uint8_t * pDataBuf);