ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_Connect(IntPtr instance, int mqtt_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetKeepAlive(IntPtr instance, int mqtt_id, int keep_alive);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_GetKeepAlive(IntPtr instance, int mqtt_id, out int pKeepAlive);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetLastWillAndTestament3(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string topic, [MarshalAs(UnmanagedType.LPStr)] string will_msg);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetLastWillAndTestament4(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string topic, [MarshalAs(UnmanagedType.LPStr)] string will_msg, int qos);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetLastWillAndTestament5(IntPtr instance, int mqtt_id, [MarshalAs(UnmanagedType.LPStr)] string topic, [MarshalAs(UnmanagedType.LPStr)] string will_msg, int qos, int retain);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_mqtt_GetLastWillAndTestamentBegin(IntPtr instance, int mqtt_id, out int pMqttGetLastWillAndTestamentRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetTLS2(IntPtr instance, int mqtt_id, int tls_version);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetTLS3(IntPtr instance, int mqtt_id, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_SetTLS5(IntPtr instance, int mqtt_id, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name, [MarshalAs(UnmanagedType.LPStr)] string client_cert_name, [MarshalAs(UnmanagedType.LPStr)] string client_key_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_mqtt_GetTLSBegin(IntPtr instance, int mqtt_id, out int pMqttGetTLSRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_Disconnect(IntPtr instance, int mqtt_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_Publish(IntPtr instance, int mqtt_id, int qos, int retain, [MarshalAs(UnmanagedType.LPStr)] string topic, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_Subscribe3(IntPtr instance, int mqtt_id, int subscribe_action, [MarshalAs(UnmanagedType.LPStr)] string topic);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_Subscribe4(IntPtr instance, int mqtt_id, int subscribe_action, [MarshalAs(UnmanagedType.LPStr)] string topic, int qos);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_mqtt_ReadBegin(IntPtr instance, int mqtt_id, out byte pDataBuf, ushort dataBufLength, [MarshalAs(UnmanagedType.LPStr)] string ppTopic);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterConnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterDisconnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterDataAvailable(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterDataDropped(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterPublishCompleted(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_mqtt_RegisterSubscribeCompleted(IntPtr instance, int callback);

        #endregion

        #region NETWORK_TIME Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_network_time_SetClientEnabled(IntPtr instance, int client_status);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_network_time_GetClientEnabled(IntPtr instance, out int pClientStatus);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_network_time_SetNtpServer(IntPtr instance, int ntp_server_id, [MarshalAs(UnmanagedType.LPStr)] string ntp_server_address);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_network_time_GetNtpServerBegin(IntPtr instance, out int pNtpGetNtpServerRsp);

        #endregion

        #region POWER Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_power_DeepSleepWithGpioWakeup(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_power_DeepSleep(IntPtr instance, int wakeup_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_power_SetPowerSaveLevel(IntPtr instance, int level);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_power_GetPowerSaveLevel(IntPtr instance, out int pLevel);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_power_SetPowerSaveTimeout(IntPtr instance, int timeoutMs);

        #endregion

        #region SECURITY Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_CertificateRemove(IntPtr instance, int cert_type, [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_CertificateRemoveAll(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_CertificateUpload(IntPtr instance, int cert_type, [MarshalAs(UnmanagedType.LPStr)] string name, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_CertificateUploadPW(IntPtr instance, int cert_type, [MarshalAs(UnmanagedType.LPStr)] string name, [MarshalAs(UnmanagedType.LPStr)] string password, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_security_ListCertificatesBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_security_ListCertificatesGetNext(IntPtr instance, out int pSecListCertificatesRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_security_ReadAllCertificatesDetailsBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string name, out int pSecReadAllCertificatesDetailsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_security_ReadCertificatesDetailsBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string name, int cert_detail_id, out int pSecReadCertificatesDetailsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_security_ListTlsExtensionsBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_security_ListTlsExtensionsGetNext(IntPtr instance, out int pSecListTlsExtensionsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_SetTlsServerNameIndication(IntPtr instance, int enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_GetTlsServerNameIndication(IntPtr instance, out int pEnabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_SetTlsHandshakeFrag(IntPtr instance, int enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_security_GetTlsHandshakeFrag(IntPtr instance, out int pEnabled);

        #endregion

        #region SOCKET Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Create1(IntPtr instance, int protocol, out int pSocketHandle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Create2(IntPtr instance, int protocol, int pref_ip_ver, out int pSocketHandle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_SetTLS2(IntPtr instance, int socket_handle, int tls_version);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_SetTLS3(IntPtr instance, int socket_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_SetTLS5(IntPtr instance, int socket_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name, [MarshalAs(UnmanagedType.LPStr)] string client_cert_name, [MarshalAs(UnmanagedType.LPStr)] string client_key_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_socket_GetTLSBegin(IntPtr instance, int socket_handle, out int pSocketGetTLSRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Connect(IntPtr instance, int socket_handle, [MarshalAs(UnmanagedType.LPStr)] string host_address, int remote_port);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_SetReadMode(IntPtr instance, int read_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetReadMode(IntPtr instance, out int pReadMode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Write(IntPtr instance, int socket_handle, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Close(IntPtr instance, int socket_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Read(IntPtr instance, int socket_handle, int length, out byte pDataBuf);
